Replace exisiting header banner with a compressed version.

--- a/custom.css
+++ b/custom.css
@@ -27,6 +27,12 @@ input[type="submit"] {
 }
 
 
+/* "View Homes" Button on home page */
+a.button {
+    background-color: #a4ce59 !important;
+}
+
+
 
 
 /***** MEDIA QUERIES *****/
