Move #home-cta-2 higher on the home page, alter the background color and change the max-width of parent div to give more prominance to the sponsors.

--- a/custom.css
+++ b/custom.css
@@ -23,6 +23,13 @@ header#main-banner {
     color: #3e392b !important;
 }
 
+#home-cta-2 {
+    background-color: #e8f2f9 !important;
+}
+
+#home-cta-2 .cta-description {
+    max-width: 100% !important;
+}
 
 
 input[type="submit"] {
