Make site-header container width value: max-content to accommodate Help menu item in nav bar.

--- a/custom.css
+++ b/custom.css
@@ -13,6 +13,7 @@ header#main-banner {
 .site-header nav {
     float: left !important;
     margin-left: 0 !important;
+    width: max-content !important;
 }
 
 .nav-primary .wpsight-menu a {
