Add a new sponsors image (cta-2)on homepage, change padding in CSS.

--- a/custom.css
+++ b/custom.css
@@ -26,6 +26,7 @@ header#main-banner {
 
 #home-cta-2 {
     background-color: #e8f2f9 !important;
+    padding: 10px 0 0 0;
 }
 
 #home-cta-2 .cta-description {
