--- a/custom.css
+++ b/custom.css
@@ -10,6 +10,10 @@ header#main-banner {
     background-color: transparent !important;
 }
 
+.container.clearfix {
+    margin-left: 0 !important;
+}
+
 .site-header nav {
     float: left !important;
     margin-left: 0 !important;
